# swampup

./: .gitignore  README.md
automation/: README.md  betalocalrepo.yaml  betaremote.yaml  catchup.sh  jPipelineArtCommon
automation/aql-example/: latestDockerApp.aql  listCriticalVulnerabiliitesOnProd.aql  listDockerAppDependencies.aql
automation/docker-app/: Dockerfile  Jenkinsfile  retag.json
bintray/: Dockerfile  Jenkinsfile  amaze-1.0-x86.tgz  commands.list  eula.md  prep.sh
conan/: commands.list
conan/exercises/consumer/: CMakeLists.txt  commands.list  conanfile.txt
conan/exercises/gtest/: CMakeLists.txt  conanfile.py  hellolib.cpp  hellolib.h  test.cpp
conan/exercises/gtest/consumer/: conaninfo.txt
conan/exercises/gtest/package/: CMakeLists.txt  conanfile.py
dockerlfc/: build.gradle  settings.gradle
essentials_of_jfrog_artifactory/: README.md  aql.json  commands-unix.list  commands-windows.list  group.json  jenkins-user.json  license..bat  license.bat  license.sh  permission-target-jenkins.json  permission-target-read.json  permission-target-release-eng.json  permission-target-write.json  promote.json  repository-release-local-config.json  repository-release-virtual-config.json  repository-release-virtual-config2.json  repository-remote-config.json  repository-snapshot-local-config.json  repository-snapshot-virtual-config.json  repository-staging-local-config.json  update-permission-target-jenkins.json  user.json
sample/: build.gradle
security/: commands-unix.list  group.json  group_admin.json  token.json  user.json
(+68 files in other folders)
